# deg-agents

./: .dockerignore  .gitignore  DEG Sandbox Beckn postman collection.postman_collection.json  DEG World Engine - Developer Docs.postman_collection.json  Dockerfile  FYI.md  README.md  agents-experience.txt  config.yaml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run.py  test_llm_latency.py
agents/customer/SolarizationAgent/: agent.py  tasks.py  tools.py
app/: agent.py  chat_context_store.py  config.py  crew_definitions.py  main.py  models.py  openapi_parser.py  orchestrator.py  tool_registry.py
app/agents/customer/SolarizationAgent/: agent.py  tasks.py
app/config/: settings.py
app/core/: auth.py  history_manager.py  knowledge_base.py  llm_manager.py  meter_validator.py  orchestrator.py  otp_service.py  query_router.py  session_manager.py  websocket_manager.py
app/handlers/: base_handler.py  dfp_handler.py  generic_handler.py  grid_utility_handler.py  solar_handler.py  utility_handler.py  utils.py
app/middleware/: auth_middleware.py
app/models/: chat.py
app/routers/: chat.py  deg_mkc.py  grid_alerts.py  grid_utility_ws.py  health.py  websocket.py
app/tools/common_tools/: constants.py  general_knowledge.py  update_er.py
app/tools/specific_tools/beckn_tools/: confirm.py  constants.py  search.py  select.py
app/utils/: model_warmer.py
docker/: Dockerfile  docker-compose.yml
reference/: agent_with_human_interaction.py
specs/: sandbox_api_spec.json  world_engine_api_spec.json
(+9 files in other folders)
