[project]
name = "deg-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-openai>=0.3.16",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.7.0"
]
